# boost-async-client-server

./: README.md
common/: Converters.cpp  Converters.hpp  CurrentTime.cpp  CurrentTime.hpp
network/: NetworkConst.hpp
network/client/: ClientSideBase.cpp  ClientSideBase.hpp  NetworkClientBase.cpp  NetworkClientBase.hpp  ServerSideClient.cpp  ServerSideClient.hpp
network/message/: MessageHeader.cpp  MessageHeader.hpp  MessageTailSize.cpp  MessageTailSize.hpp  NetworkMessage.cpp  NetworkMessage.hpp
network/server/: NetworkServerBase.cpp  NetworkServerBase.hpp
serialize/: DataTypes.hpp  Serializable.hpp
tests/network_test/: CMakeLists.txt  NetworkClientTest.cpp  NetworkClientTest.hpp  NetworkServerTest.cpp  NetworkServerTest.hpp  NetworkTest.cpp  NetworkTestFunc.cpp  NetworkTestFunc.hpp  makefile
